Fix file path. Adjust nav position on mobile.

--- a/www/less/home.less
+++ b/www/less/home.less
@@ -315,7 +315,7 @@ nav{
         }
     }
     nav{
-        margin-top:-25%;
+        margin-top:-22%;
     }
 }
 @media screen and (max-height:480px) and (orientation:landscape){
